@@ -1,7 +1,5 @@
 package eu.essi_lab.gssrv.servlet;
 
-import java.io.*;
-
 /*-
  * #%L
  * Discovery and Access Broker (DAB)
@@ -23,39 +21,24 @@ import java.io.*;
  * #L%
  */
 
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
-import java.util.List;
-import java.util.Map.Entry;
-import java.util.Optional;
-import java.util.Set;
-import java.util.UUID;
+import com.amazonaws.util.*;
+import eu.essi_lab.cfga.gs.*;
+import eu.essi_lab.cfga.gs.setting.*;
+import eu.essi_lab.cfga.gs.setting.WMSCacheSetting.*;
+import eu.essi_lab.gssrv.servlet.wmscache.*;
+import eu.essi_lab.lib.servlet.*;
+import eu.essi_lab.lib.utils.Chronometer.*;
+import eu.essi_lab.lib.utils.*;
+import eu.essi_lab.messages.web.*;
+import eu.essi_lab.pdk.*;
 
-import javax.servlet.Filter;
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.MultivaluedMap;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.StreamingOutput;
-
-import com.amazonaws.util.IOUtils;
-
-import eu.essi_lab.cfga.gs.ConfigurationWrapper;
-import eu.essi_lab.cfga.gs.setting.WMSCacheSetting;
-import eu.essi_lab.cfga.gs.setting.WMSCacheSetting.WMSCacheMode;
-import eu.essi_lab.gssrv.servlet.wmscache.CachedBodyHttpServletResponse;
-import eu.essi_lab.gssrv.servlet.wmscache.WMSCache;
-import eu.essi_lab.lib.servlet.RequestManager;
-import eu.essi_lab.lib.utils.Chronometer.TimeFormat;
-import eu.essi_lab.lib.utils.GSLoggerFactory;
-import eu.essi_lab.messages.web.WebRequest;
-import eu.essi_lab.pdk.ChronometerInfoProvider;
+import javax.servlet.*;
+import javax.servlet.http.*;
+import javax.ws.rs.core.*;
+import java.io.*;
+import java.net.*;
+import java.util.*;
+import java.util.Map.*;
 
 /**
  * @author boldrini
@@ -81,7 +64,7 @@ public class WMSCacheFilter implements Filter {
 	    ServletResponse servletResponse, //
 	    FilterChain filterChain) throws IOException, ServletException {
 
-	if (!enabled) {
+	if (!enabled || UserFinderFilter.isVaadinRequest((HttpServletRequest) servletRequest)) {
 	    // continue to next filter
 	    filterChain.doFilter(servletRequest, servletResponse);
 	    return;
@@ -95,24 +78,20 @@ public class WMSCacheFilter implements Filter {
 	WebRequest webRequest = new WebRequest((HttpServletRequest) servletRequest, false, requestId);
 
 	String requestPath = webRequest.getRequestPath();
-	String requestURL = webRequest.getServletRequest().getRequestURL().toString();	//
+	String requestURL = webRequest.getServletRequest().getRequestURL().toString();        //
 	String query = webRequest.getServletRequest().getQueryString();
 	//
 	//
 
 	if ( // requestPath.endsWith("/wms") || //
-	     // requestPath.endsWith("/wms-extent") || //
-	requestPath.endsWith("/wms-cluster")&&query!=null && query.toLowerCase().contains("getmap") //
+	    // requestPath.endsWith("/wms-extent") || //
+		requestPath.endsWith("/wms-cluster") && query != null && query.toLowerCase().contains("getmap") //
 
 	) {
 
-
 	    URL url = new URL(requestURL.toString());
 	    String hostname = url.getHost();
-	    boolean useCache = true;
-	    if (hostname.equals(WMSCache.CACHE_HOST)) {
-		useCache = false;
-	    }
+	    boolean useCache = !hostname.equals(WMSCache.CACHE_HOST);
 
 	    requestPath = requestPath.substring(requestPath.lastIndexOf("/") + 1);
 
@@ -121,30 +100,40 @@ public class WMSCacheFilter implements Filter {
 	    // CACHE HIT
 
 	    if (useCache && cached != null) {
+
 		ChronometerInfoProvider chronometer = new ChronometerInfoProvider(TimeFormat.MIN_SEC_MLS);
 		chronometer.start();
-		GSLoggerFactory.getLogger(getClass()).info("{} ENDED - handling time: {}",
-			getRequestLogPrefix(webRequest) + " WMS CACHE HIT", chronometer.formatElapsedTime());
+
+		GSLoggerFactory.getLogger(getClass())
+			.info("{} ENDED - handling time: {}", getRequestLogPrefix(webRequest) + " WMS CACHE HIT",
+				chronometer.formatElapsedTime());
+
 		HttpServletResponse httpResponse = (HttpServletResponse) servletResponse;
 		httpResponse.setStatus(cached.getStatus());
 		MediaType mt = cached.getMediaType();
+
 		if (mt != null) {
 		    String type = mt.getType();
 		    if (type != null) {
 			httpResponse.setContentType(type);
 		    }
 		}
+
 		MultivaluedMap<String, String> headers = cached.getStringHeaders();
 		Set<Entry<String, List<String>>> entries = headers.entrySet();
+
 		for (Entry<String, List<String>> entry : entries) {
 		    String key = entry.getKey();
 		    List<String> values = entry.getValue();
 		    if (!values.isEmpty()) {
-			httpResponse.setHeader(key, values.get(0));
+			httpResponse.setHeader(key, values.getFirst());
 		    }
 		}
+
 		Object entity = cached.getEntity();
+
 		if (entity != null) {
+
 		    if (entity instanceof StreamingOutput so) {
 			so.write(httpResponse.getOutputStream());
 		    } else if (entity instanceof InputStream is) {
@@ -179,9 +168,7 @@ public class WMSCacheFilter implements Filter {
 		response.getOutputStream().write(body);
 
 		return;
-
 	    }
-
 	}
 
 	// NOT A WMS
@@ -202,7 +189,7 @@ public class WMSCacheFilter implements Filter {
     }
 
     /**
-     * 
+     *
      */
     private void initWMSCache() {
 	GSLoggerFactory.getLogger(getClass()).info("WMS Cache initialization STARTED");
